# core_data

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  PLAN.md  PROJECT.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apparmor/: core_data_minimal.profile
docs/: Dockerized_PostgreSQL_17_Best_Practices.md  Initial_Concept.md  Intial_Concept.md  PostgreSQL_Extension_Recommendations_2025.md  TESTING_DATABASE.md  security_philosophy.md
pgbouncer/: entrypoint.sh  pgbouncer.ini.tpl  userlist.txt.tpl
postgres/: Dockerfile
postgres/conf/: pg_hba.conf.tpl  postgresql.conf.tpl
postgres/initdb/: 00-render-config.sh  01-init-db-user-creation.sh  02-enable-extensions.sh
postgres/tools/: pgbadger  pgtune.py
scripts/: create_env.sh  daily_maintenance.sh  generate_report.py  healthcheck.sh  logical_backup_runner.sh  manage.sh  perf_diff.py  pghero_entrypoint.sh  trace_entrypoint.sh  version_status.py
scripts/lib/: async_queue.sh  audit.sh  backup.sh  common.sh  compare_float.py  db.sh  extensions.sh  extensions_helpers.sh  extensions_list.sh  maintenance.sh  maintenance_actions.sh  memcached.sh  partman.sh  pgbouncer.sh  seccomp.sh  test_dataset.sh  update_env_var.py  upgrade.sh  valkey.sh
scripts/test_data/: test_dataset.psql
seccomp/: docker-default.json  pghero.json  postgres.json
src/core_data/: __init__.py
tests/: test_lightweight.py  test_manage.py
valkey/: entrypoint.sh
