# SPDX-FileCopyrightText: 2025 Blackcat Informatics® Inc.
# SPDX-License-Identifier: MIT

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "core-data"
version = "0.0.0"
description = "Test harness dependencies for the core_data stack"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Blackcat Informatics"}]
dependencies = [
    "psycopg[binary]>=3.2.10",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.2",
]
